[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/scenes/editor/InspectorPanel/Tab/Tab.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/editor/InspectorPanel/AtbHBox/AtbHbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/editor/InspectorPanel/Tab/ObjectTab/ObjectTab.gd" type="Script" id=3]
[ext_resource path="res://src/scenes/editor/InspectorPanel/Tab/ObjectTab/ObjDeselectEscKeyCtrler.gd" type="Script" id=4]
[ext_resource path="res://assets/theme/DarkTheme/Fonts/Ubuntu-L.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/theme/DarkTheme/Dark.theme" type="Theme" id=6]

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 5 )

[sub_resource type="InputEventKey" id=2]
scancode = 16777217

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="ObjectTab" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="TitleLabel" parent="VBox/ScrollContainer/Vbox" index="0"]
margin_top = -1.0
margin_bottom = 20.4
theme = ExtResource( 6 )

[node name="AtbHboxObjVecX" parent="VBox/ScrollContainer/Vbox" index="1" instance=ExtResource( 2 )]
margin_top = 25.0
margin_bottom = 49.0
hint_tooltip = "Horizontal direction. Possible values:
- The texture's width scale factor (e.g. set to -1 to make the sprite appear flipped).
- The speed of the object in x-axis (e.g. Conveyors)
- Shift position (e.g. Pickups, Energy Element, Lift Block)"
property_name = "Scale X"
code = "b"

[node name="AtbHboxObjVecY" parent="VBox/ScrollContainer/Vbox" index="2" instance=ExtResource( 2 )]
margin_top = 53.0
margin_bottom = 77.0
hint_tooltip = "Vertical Direction. Possible Values:
- The texture's height scale factor (however, this value won't work on every object).
- The speed of the object in y-axis"
property_name = "Scale Y"
code = "c"

[node name="AtbHboxObjType" parent="VBox/ScrollContainer/Vbox" index="3" instance=ExtResource( 2 )]
margin_top = 81.0
margin_bottom = 105.0
hint_tooltip = "Category ID. Valid values are 0, 4, 5, 6, 7, and 8.
0 - Special
4 - Player
5 - Enemies
6 - General
7 - Pickups
8 - Bosses"
property_name = "Type ID"
code = "d"

[node name="AtbHboxObjID" parent="VBox/ScrollContainer/Vbox" index="4" instance=ExtResource( 2 )]
margin_top = 109.0
margin_bottom = 133.0
hint_tooltip = "Asset ID of the object."
property_name = "Object ID"
code = "e"

[node name="AtbHboxObjAppearance" parent="VBox/ScrollContainer/Vbox" index="5" instance=ExtResource( 2 )]
margin_top = 137.0
margin_bottom = 161.0
hint_tooltip = "Object's appearance, such as colors."
property_name = "Appearance"
code = "f"

[node name="AtbHboxObjDirection" parent="VBox/ScrollContainer/Vbox" index="6" instance=ExtResource( 2 )]
margin_top = 165.0
margin_bottom = 189.0
hint_tooltip = "The direction of the object's behavior. Some objects
use this instead of VectorX and VectorY values."
property_name = "Direction"
code = "g"

[node name="AtbHboxObjTimer" parent="VBox/ScrollContainer/Vbox" index="7" instance=ExtResource( 2 )]
margin_top = 193.0
margin_bottom = 217.0
hint_tooltip = "Number of the object. For example, Count Bomb
explosion delay, Force Beam emission delay, the
speed of Rain object, etc."
property_name = "Timer"
code = "h"

[node name="AtbHboxObjTexH" parent="VBox/ScrollContainer/Vbox" index="8" instance=ExtResource( 2 )]
visible = false
margin_top = 214.0
margin_bottom = 238.0
property_name = "Texture H Offset"
code = "j"

[node name="AtbHboxObjTexV" parent="VBox/ScrollContainer/Vbox" index="9" instance=ExtResource( 2 )]
visible = false
margin_top = 214.0
margin_bottom = 238.0
property_name = "Texture V Offset"
code = "k"

[node name="AtbHboxObjDestX" parent="VBox/ScrollContainer/Vbox" index="10" instance=ExtResource( 2 )]
margin_top = 221.0
margin_bottom = 245.0
hint_tooltip = "The object's destination in x-axis. Used in some
objects that require placing both the initial and the
destination position (teleporter, rotating platform, for
instance)."
property_name = "Destination X"
code = "m"

[node name="AtbHboxObjDestY" parent="VBox/ScrollContainer/Vbox" index="11" instance=ExtResource( 2 )]
margin_top = 249.0
margin_bottom = 273.0
hint_tooltip = "The object's destination in y-axis. Used in some
objects that require placing both the initial and the
destination position (teleporter, rotating platform, for
instance)."
property_name = "Destination Y"
code = "n"

[node name="AtbHboxObjOption" parent="VBox/ScrollContainer/Vbox" index="12" instance=ExtResource( 2 )]
margin_top = 277.0
margin_bottom = 301.0
hint_tooltip = "Weapon ID, ..."
property_name = "Option"
code = "o"

[node name="AtbHboxObjNewSpeed" parent="VBox/ScrollContainer/Vbox" index="13" instance=ExtResource( 2 )]
margin_top = 305.0
margin_bottom = 329.0
hint_tooltip = "Weapon ID, ..."
property_name = "New Speed"
code = "p"

[node name="AtbHboxObjNewRails" parent="VBox/ScrollContainer/Vbox" index="14" instance=ExtResource( 2 )]
margin_top = 333.0
margin_bottom = 357.0
hint_tooltip = "Weapon ID, ..."
property_name = "New Rails"
code = "q"

[node name="AtbHboxObjNewAppearance" parent="VBox/ScrollContainer/Vbox" index="15" instance=ExtResource( 2 )]
margin_top = 361.0
margin_bottom = 385.0
hint_tooltip = "Weapon ID, ..."
property_name = "New Appearance"
code = "r"

[node name="HSeparator" type="HSeparator" parent="VBox/ScrollContainer/Vbox" index="16"]
margin_top = 389.0
margin_right = 792.0
margin_bottom = 393.0

[node name="AtbLabelLevelObject" type="Label" parent="VBox/ScrollContainer/Vbox" index="17"]
margin_top = 396.0
margin_right = 792.0
margin_bottom = 419.4
theme = ExtResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Level Object"
uppercase = true

[node name="AtbLockBossDoors" type="Label" parent="VBox/ScrollContainer/Vbox" index="18"]
visible = false
margin_top = 336.0
margin_right = 792.0
margin_bottom = 350.0
text = "This Asset will Lock boss doors until it is no longer on screen"
autowrap = true

[node name="AtbFoundTheBone" type="Label" parent="VBox/ScrollContainer/Vbox" index="19"]
visible = false
margin_top = 336.0
margin_right = 792.0
margin_bottom = 350.0
text = "Found the Bone"
autowrap = true

[node name="AtbBossWarning" type="Label" parent="VBox/ScrollContainer/Vbox" index="20"]
visible = false
margin_top = 340.0
margin_right = 792.0
margin_bottom = 354.0
text = "Do not move Bosses in this tool, it will crash your game."
autowrap = true

[node name="ObjDeselectEscKeyCtrler" type="Button" parent="." index="1"]
margin_right = 12.0
margin_bottom = 20.0
rect_clip_content = true
focus_mode = 0
shortcut = SubResource( 3 )
text = "5"
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_entered" from="VBox/ScrollContainer/Vbox/AtbHboxObjVecX" to="." method="_on_AtbHboxObjVecX_value_entered"]
[connection signal="value_entered" from="VBox/ScrollContainer/Vbox/AtbHboxObjVecY" to="." method="_on_AtbHboxObjVecY_value_entered"]
[connection signal="value_entered" from="VBox/ScrollContainer/Vbox/AtbHboxObjType" to="." method="_on_AtbHboxObjType_value_entered"]
[connection signal="value_entered" from="VBox/ScrollContainer/Vbox/AtbHboxObjID" to="." method="_on_AtbHboxObjID_value_entered"]
[connection signal="value_entered" from="VBox/ScrollContainer/Vbox/AtbHboxObjAppearance" to="." method="_on_AtbHboxObjAppearance_value_entered"]
[connection signal="value_entered" from="VBox/ScrollContainer/Vbox/AtbHboxObjDirection" to="." method="_on_AtbHboxObjDirection_value_entered"]
[connection signal="value_entered" from="VBox/ScrollContainer/Vbox/AtbHboxObjTimer" to="." method="_on_AtbHboxObjTimer_value_entered"]
[connection signal="value_entered" from="VBox/ScrollContainer/Vbox/AtbHboxObjTexH" to="." method="_on_AtbHboxObjTexH_value_entered"]
[connection signal="value_entered" from="VBox/ScrollContainer/Vbox/AtbHboxObjTexV" to="." method="_on_AtbHboxObjTexV_value_entered"]
[connection signal="value_entered" from="VBox/ScrollContainer/Vbox/AtbHboxObjDestX" to="." method="_on_AtbHboxObjDestX_value_entered"]
[connection signal="value_entered" from="VBox/ScrollContainer/Vbox/AtbHboxObjDestY" to="." method="_on_AtbHboxObjDestY_value_entered"]
[connection signal="value_entered" from="VBox/ScrollContainer/Vbox/AtbHboxObjOption" to="." method="_on_AtbHboxObjOption_value_entered"]
[connection signal="value_entered" from="VBox/ScrollContainer/Vbox/AtbHboxObjNewSpeed" to="." method="_on_AtbHboxObjNewSpeed_value_entered"]
[connection signal="value_entered" from="VBox/ScrollContainer/Vbox/AtbHboxObjNewRails" to="." method="_on_AtbHboxObjNewRails_value_entered"]
[connection signal="value_entered" from="VBox/ScrollContainer/Vbox/AtbHboxObjNewAppearance" to="." method="_on_AtbHboxObjNewAppearance_value_entered"]
